# thread_local_test

./: CMakeLists.txt  README.md  main.cpp
shared_test_lib/: CMakeLists.txt  MakeWorker.cpp  MakeWorker.h
static_test_lib/: CMakeLists.txt  test.cpp  test.h
